# biaplotter

./: .buildinfo  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  artists_api.html  examples_intro.html  genindex.html  intro.html  modules.html  new_plotter.py  objects.inv  plotter_api.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  selectors_api.html  setup.cfg  tox.ini
.github/workflows/: book.yml  test_and_deploy.yml
_sources/: artists_api.md  intro.md  modules.md  plotter_api.md  selectors_api.md
_sources/examples/: canvas_widget_example.ipynb  scatter_artist_example.ipynb
_static/js/: hoverxref.js
docs/: _config.yml  _toc.yml  artists_api.md  classes.md  examples_intro.md  intro.md  modules.md  plotter_api.md  requirements.txt
docs/examples/: canvas_widget_example.ipynb  features_histogram.ipynb  histogram_artist_example.ipynb  histogram_artist_example_temp.ipynb  scatter_artist_example.ipynb
examples/: canvas_widget_example.html  features_histogram.html  histogram_artist_example.html  scatter_artist_example.html
src/biaplotter/: __init__.py  _version.py  artists.py  artists_base.py  backend_axis.py  backend_plot_handles.py  colormap.py  napari.yaml  plotter.py  selectors.py  try_artist.py  try_artists.py  try_histogram.ipynb
src/biaplotter/_tests/: test_artists.py  test_selectors.py  test_widget.py
